static/css/index.css
body{
    margin-left:8%;
    margin-right:8%;
}

.container{
    display: flex;
    justify-content: center;
    flex-wrap: nowrap;
    flex-direction: column;
    max-width: none !important;
}

div{
    display: block;
}

#career{
    margin-top: 10px;
}
.experience-dates{
    font-size: 14px;
}

h2{
    font-size: 60px !important;
    color: black !important;
    font-weight: bold !important;
    text-align: center;
    margin-top: 20px !important;
}
h3{
    font-size: 40px;
    text-align: left;
}
h1, h4{
    font-weight: 700;
    margin-bottom: 10px;
}
.header{
    text-align: left;
    display: flex;
    height: 30%;
    grid-template-columns: 30%;
}
hr{
    margin-top: 1rem;
    margin-bottom: 1rem;
    border: 0;
    border-top: 1px solid rgba(0,0,0,.1);
    box-sizing: content-box;
    height: 0;
    overflow: visible;
}


#linkedInLogo{
    width: 100%;
    height: auto;
}
#main-container{
    max-width: 84% !important;
}
#name{
    font-weight: bold;
    font-size: 500%;
    text-align: center;
    margin: auto;
}



/* NAVBAR */
.navbar{
    width: 100%;
    height: 8%;
    margin-top:-10px;
    padding-left: 0px !important;
    padding-right: 0px !important;
}
.navbar ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #333;
}

.navbar li {
    float: left;
}

.navbar li a {
    display: block;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size:24px;
}

.navbar li a:hover {
    background-color: #111;
}
/* END NAVBAR */

.podcast{
    overflow: auto;
    white-space: nowrap;
}

.podcast img{
    height: 150px;
    width: 150px;
    margin-right: 50px;
}

.podcast-text{
    margin-bottom: 20px;
    font-size: 40px;
}
#profile{
    flex-direction: row;
    justify-content: start;
}
#profile-picture{
    flex-grow:1;
    width: 100%;
}
#profile-picture img{
    border-radius: 50%;
    flex-grow: 1;
}

#projects > div > div.col-md-4.project{
    text-align: center;
}

.project img{
    height: 300px;
    width: 300px;
    margin: auto
}

.project #nanolens-img{
    background-color: hotpink;
}


#projects{
    overflow: auto;
    white-space: nowrap;
}

.row{
    flex-direction: row;
}
b, strong{
    font-weight: 700;
}

